--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,23 @@
 language: python
+
 python:
   - "2.7"
-  - "3.2"
   - "3.3"
   - "3.4"
-  - "pypy"
-  - "pypy3"
+  - "3.5"
 
-script: python setup.py test
+before_install:
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+      wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
+    else
+      wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+    fi
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  - conda install conda-build
+
+install:
+  - conda build --python "$TRAVIS_PYTHON_VERSION" conda
